--- a/config/environments/development.rb.sample
+++ b/config/environments/development.rb.sample
@@ -6,14 +6,29 @@ Merb::Config.use { |c|
   c[:log_auto_flush ] = true
   c[:ignore_tampered_cookies] = true
   c[:log_level] = :debug
+  c[:reload_templates] = true
 
   c[:session_id_key] = 'community_shelf_dev'
   c[:session_secret_key]  = '5c1f79f69832b6cfd7b55dc0d6fb38086fdbfcfc'
   c[:session_store] = 'cookie'
+
+  c[:isbndb_key] = "6S2BUFOE"
 }
 
 
 Merb::BootLoader.before_app_loads do
-  DataMapper.setup(:default, "sqlite3:" + Merb.root / :tmp / 'community_shelf.db')
-  DataObjects::Sqlite3.logger = DataObjects::Logger.new(Merb.log_file, 0)
+  DataMapper.setup(:default, "sqlite3:" + Merb.root / :tmp / 'dev.db')
+  DataObjects::Sqlite3.logger = Merb.logger
+
+
+  unless defined?(CACHE_SETUP)    # HACK: rake tasks are loading this file twice
+    Merb::Cache.setup do
+      register(:fragment_store, Merb::Cache::FileStore, :dir => Merb.root / :tmp / :fragments)
+      register(:actions, Merb::Cache::FileStore, :dir => Merb.root / :tmp / :actions)
+      register(:page_store, Merb::Cache::PageStore[Merb::Cache::FileStore], :dir => Merb.root / :tmp / :pages)
+      register(:action_store, Merb::Cache::ActionStore[:actions])
+      register(:default, Merb::Cache::AdhocStore[:page_store, :action_store, :fragment_store])
+      CACHE_SETUP = true
+    end
+  end
 end
